SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=544512

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -32,6 +32,7 @@ GenericName[it]=Interfaccia a profiler
 GenericName[ja]=プロファイラフロントエンド
 GenericName[lt]=Profiliuoklio naudotojo sąsaja
 GenericName[nb]=Grensesnitt for profilvisning
+GenericName[nds]=Profiler-Böversiet
 GenericName[nl]=Profiler-hulpprogramma
 GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
 GenericName[pl]=Interfejs do profilera
@@ -67,6 +68,7 @@ Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
 Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[nb]=Vis informasjon om ytelse.
+Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
 Comment[nl]=Visualisatie van Performance Profiling Data
 Comment[pl]=Wizualizacja danych profilowania wydajności
 Comment[pt]=Visualização dos Dados de Análise de Performance
