--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -17,6 +17,7 @@ Comment[hu]=Cachegrind/Callgrind teljesítményprofil-fájl
 Comment[is]=Niðurstaða afkastakönnunar á Cachegrind/Callgrind
 Comment[it]=Dump del profilo di Cachegrind/Callgrind
 Comment[ja]=Callgrind/Callgrind プロファイルダンプ
+Comment[nds]=Cachegrind/Callgrind-Profilutgaav
 Comment[nl]=Cachegrind/Callgrind Profieldump
 Comment[pl]=Zrzut profilowania Cachegrind/Callgrind
 Comment[pt]=Resultado da Análise do Cachegrind/Callgrind
