Add project tag into cmakelist
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=549328

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+project(kcachegrind)
+
 set( KCACHEGRIND_VERSION "0.4.6kde")
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config-kcachegrind.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-kcachegrind.h )
