SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=556410

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -61,7 +61,7 @@ Comment[en_GB]=Visualisation of Performance Profiling Data
 Comment[es]=Visualización de datos de análisis de rendimiento
 Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
 Comment[eu]=Errendimendu profil datuen bistaratzea
-Comment[fi]=Visualisointi tehoprofiloinnin tiedoista
+Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
 Comment[fr]=Visualisation des données de performance de profilage
 Comment[hi]=परफार्मेस प्रोफाइलिंग डाटा का विजुअलाइज़ेशन
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
