--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -10,7 +10,7 @@ Comment[el]=Αποτύπωση προφίλ Cachegrind/Callgrind
 Comment[es]=Resultado de análisis de Cachegrind/Callgring
 Comment[et]=Cachegrind/Callgrind profileerimistõmmis
 Comment[eu]=Cachegrind/Callgrind profil iraulketa
-Comment[fi]=Cachegrind/Callgrind profiililista
+Comment[fi]=Cachegrind/Callgrind-profiilivedos
 Comment[fr]=Dépôt de profil Cachegrind / Callgrind
 Comment[hi]=केश-ग्रिंड/काल-ग्रिंड प्रोफ़ाइल डम्प
 Comment[hu]=Cachegrind/Callgrind teljesítményprofil-fájl
