--- a/pics/CMakeLists.txt
+++ b/pics/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory( hicolor )
 
 ########### install files ###############
 
-install_files( ${DATA_INSTALL_DIR}/kcachegrind/icons FILES  )
+install( FILES   DESTINATION  ${DATA_INSTALL_DIR}/kcachegrind/icons )
 
 
 
