--- a/pics/hicolor/CMakeLists.txt
+++ b/pics/hicolor/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 ########### install files ###############
 
-install_files( ${DATA_INSTALL_DIR}/kcachegrind/icons FILES  )
+install( FILES   DESTINATION  ${DATA_INSTALL_DIR}/kcachegrind/icons )
 
 
 
