--- a/converters/CMakeLists.txt
+++ b/converters/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 ########### install files ###############
-install( PROGRAMS hotshot2calltree op2calltree pprof2calltree dprof2calltree memprof2calltree DESTINATION bin )
+install( PROGRAMS hotshot2calltree op2calltree pprof2calltree dprof2calltree memprof2calltree
+    DESTINATION ${BIN_INSTALL_DIR} )
 
 
 
