Fix install icons
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=565869

--- a/pics/hicolor/CMakeLists.txt
+++ b/pics/hicolor/CMakeLists.txt
@@ -1,15 +1,3 @@
 
+kde4_install_icons( ${DATA_INSTALL_DIR}/kcachegrind/icons hicolor )
 
-
-
-########### install files ###############
-
-install( FILES   DESTINATION  ${DATA_INSTALL_DIR}/kcachegrind/icons )
-
-
-
-
-#original Makefile.am contents follow:
-
-#kcachegrindicondir = $(kde_datadir)/kcachegrind/icons
-#kcachegrindicon_ICON = AUTO
