SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=566021

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -34,6 +34,7 @@ GenericName[lt]=Profiliuoklio naudotojo sąsaja
 GenericName[nb]=Grensesnitt for profilvisning
 GenericName[nds]=Profiler-Böversiet
 GenericName[nl]=Profiler-hulpprogramma
+GenericName[nn]=Grensesnitt for profilvising
 GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
 GenericName[pl]=Interfejs do profilera
 GenericName[pt]=Interface de Profiler
@@ -71,6 +72,7 @@ Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[nb]=Vis informasjon om ytelse.
 Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
 Comment[nl]=Visualisatie van Performance Profiling Data
+Comment[nn]=Vis informasjon om yting
 Comment[pl]=Wizualizacja danych profilowania wydajności
 Comment[pt]=Visualização dos Dados de Análise de Performance
 Comment[pt_BR]=Visualização de Dados de Perfil de Desempenho
