--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -19,6 +19,7 @@ Comment[it]=Dump del profilo di Cachegrind/Callgrind
 Comment[ja]=Callgrind/Callgrind プロファイルダンプ
 Comment[nds]=Cachegrind/Callgrind-Profilutgaav
 Comment[nl]=Cachegrind/Callgrind Profieldump
+Comment[nn]=Cachegrind/Callgrind-profildump
 Comment[pl]=Zrzut profilowania Cachegrind/Callgrind
 Comment[pt]=Resultado da Análise do Cachegrind/Callgrind
 Comment[pt_BR]=Depósito de Perfil Cachegrind/Callgrind
