Adapt with new KDE4_INSTALL_ICONS (automatic detect of icons theme)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=572971

--- a/kcachegrind/CMakeLists.txt
+++ b/kcachegrind/CMakeLists.txt
@@ -68,7 +68,6 @@ install( FILES tips  DESTINATION  ${DATA_INSTALL_DIR}/kcachegrind )
 install( FILES kcachegrindui.rc  DESTINATION  ${DATA_INSTALL_DIR}/kcachegrind )
 install( FILES x-kcachegrind.desktop  DESTINATION  ${MIME_INSTALL_DIR}/application )
 
-kde4_install_icons( ${ICON_INSTALL_DIR}  hicolor )
-kde4_install_icons( ${ICON_INSTALL_DIR}  locolor )
+kde4_install_icons( ${ICON_INSTALL_DIR}   )
 
 
