SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=575279

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -22,6 +22,7 @@ GenericName[el]=Πρόγραμμα προφίλ
 GenericName[es]=Interfaz de Profiler
 GenericName[et]=Profileerimisrakendus
 GenericName[eu]=Profilatzailearen interfazea
+GenericName[fa]=پایانه گزارش‌گیر
 GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
 GenericName[ga]=Comhéadan ar Phróifíleoir
@@ -62,6 +63,7 @@ Comment[en_GB]=Visualisation of Performance Profiling Data
 Comment[es]=Visualización de datos de análisis de rendimiento
 Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
 Comment[eu]=Errendimendu profil datuen bistaratzea
+Comment[fa]=تجسم کارایی گزارش داده‌ها
 Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
 Comment[fr]=Visualisation des données de performance de profilage
 Comment[hi]=परफार्मेस प्रोफाइलिंग डाटा का विजुअलाइज़ेशन
