Necessary to change KDE4_AUTOMOC macro to support enable-final argument
(there was not a dependancy between <name>_final.cpp file and
moc generated files => moc files were never created)

Not necessary to rebuild all kdelibs just cp kdelibs/cmake/modules/KDE4Macros.cmake <path_kde4>/share/apps/cmake/modules

I ported and tested all kde module (without enable-final argument, it compiles fines (test and program))
Don't try to use enable-final argument for the moment it doesn't compile (but dependancy works)

Regards

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=595047

--- a/kcachegrind/CMakeLists.txt
+++ b/kcachegrind/CMakeLists.txt
@@ -46,7 +46,7 @@ set(kcachegrind_SRCS
    stackitem.cpp 
    callgraphview.cpp )
 
-kde4_automoc(${kcachegrind_SRCS})
+kde4_automoc(kcachegrind ${kcachegrind_SRCS})
 
 kde4_add_ui3_files(kcachegrind_SRCS 
    configdlgbase.ui )
