SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=596298

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -22,7 +22,7 @@ GenericName[el]=Πρόγραμμα προφίλ
 GenericName[es]=Interfaz de Profiler
 GenericName[et]=Profileerimisrakendus
 GenericName[eu]=Profilatzailearen interfazea
-GenericName[fa]=پایانه گزارش‌گیر
+GenericName[fa]=پایانۀ گزارش‌گیر
 GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
 GenericName[ga]=Comhéadan ar Phróifíleoir
