SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=624050

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -10,9 +10,11 @@ Terminal=false
 Name=KCachegrind
 Name[x-test]=xxKCachegrindxx
 GenericName=Profiler Frontend
+GenericName[el]=Πρόγραμμα προφίλ
 GenericName[fr]=Interface de profilage
 GenericName[x-test]=xxProfiler Frontendxx
 Comment=Visualization of Performance Profiling Data
+Comment[el]=Αναπαράσταση δεδομένων ταχύτητας προφίλ
 Comment[fr]=Visualisation des données de performance de profilage
 Comment[x-test]=xxVisualization of Performance Profiling Dataxx
 X-DBUS-StartupType=Multi
