--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -18,6 +18,7 @@ Comment[hu]=Cachegrind/Callgrind teljesítményprofil-fájl
 Comment[is]=Niðurstaða afkastakönnunar á Cachegrind/Callgrind
 Comment[it]=Dump del profilo di Cachegrind/Callgrind
 Comment[ja]=Callgrind/Callgrind プロファイルダンプ
+Comment[kk]=Cachegrind/Callgrind профилінің дампы
 Comment[nds]=Cachegrind/Callgrind-Profilutgaav
 Comment[nl]=Cachegrind/Callgrind Profieldump
 Comment[nn]=Cachegrind/Callgrind-profildump
