--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -8,14 +8,82 @@ Icon=kcachegrind
 DocPath=kcachegrind/index.html
 Terminal=false
 Name=KCachegrind
+Name[sv]=Kcachegrind
+Name[ta]=  இடைமாற்றகட்டம்
 Name[x-test]=xxKCachegrindxx
 GenericName=Profiler Frontend
+GenericName[ca]=Interfície de Profiler
+GenericName[cs]=Rozhraní pro profilaci
+GenericName[cy]=Blaen-wyneb Proffilydd
+GenericName[da]=Grænseflade til profilering
+GenericName[de]=Profiler Oberfläche
 GenericName[el]=Πρόγραμμα προφίλ
+GenericName[es]=Interfaz de Profiler
+GenericName[et]=Profileerimisrakendus
+GenericName[eu]=Profilatzailearen interfazea
+GenericName[fa]=پایانۀ گزارش‌گیر
+GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
+GenericName[ga]=Comhéadan ar Phróifíleoir
+GenericName[hu]=Profilozó
+GenericName[is]=Myndrænt viðmót á afkastakönnuð
+GenericName[it]=Interfaccia a profiler
+GenericName[ja]=プロファイラフロントエンド
+GenericName[kk]=Профильдеткіштің интерфейсі
+GenericName[lt]=Profiliuoklio naudotojo sąsaja
+GenericName[nb]=Grensesnitt for profilvisning
+GenericName[nds]=Profiler-Böversiet
+GenericName[nl]=Profiler-hulpprogramma
+GenericName[nn]=Grensesnitt for profilvising
+GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
+GenericName[pl]=Interfejs do profilera
+GenericName[pt]=Interface de Profiler
+GenericName[pt_BR]=Interface para o Profiler
+GenericName[ru]=Интерфейс к профилировщику
+GenericName[sl]=Vmesnik profilnika
+GenericName[sr]=Графички интерфејс за профајлер
+GenericName[sr@Latn]=Grafički interfejs za profajler
+GenericName[sv]=Profileringsgränssnitt
+GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
+GenericName[tg]=Интерфейс ба профилкунанда
+GenericName[tr]=Profil Önyüzü
+GenericName[uk]=Інтерфейс до Profiler
 GenericName[x-test]=xxProfiler Frontendxx
+GenericName[zh_TW]=分析器前端
 Comment=Visualization of Performance Profiling Data
+Comment[ca]=Visualizació de dades de perfilat de rendiment
+Comment[cs]=Vizualizace profilovacích dat výkonu
+Comment[da]=Visualisering af profileringsdata
+Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
 Comment[el]=Αναπαράσταση δεδομένων ταχύτητας προφίλ
+Comment[en_GB]=Visualisation of Performance Profiling Data
+Comment[es]=Visualización de datos de análisis de rendimiento
+Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
+Comment[eu]=Errendimendu profil datuen bistaratzea
+Comment[fa]=تجسم کارایی گزارش داده‌ها
+Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
 Comment[fr]=Visualisation des données de performance de profilage
+Comment[hu]=Teljesítményprofil-adatok megjelenítése
+Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
+Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
+Comment[ja]=パフォーマンスプロファイルデータを視覚化
+Comment[kk]=Деректерді профильдеудің визуализациясы
+Comment[nb]=Vis informasjon om ytelse.
+Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
+Comment[nl]=Visualisatie van Performance Profiling Data
+Comment[nn]=Vis informasjon om yting
+Comment[pl]=Wizualizacja danych profilowania wydajności
+Comment[pt]=Visualização dos Dados de Análise de Performance
+Comment[pt_BR]=Visualização de Dados de Perfil de Desempenho
+Comment[ru]=Утилита для визуального профилирования приложений
+Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
+Comment[sr]=Визуелизација података о профилисању перформанси
+Comment[sr@Latn]=Vizuelizacija podataka o profilisanju performansi
+Comment[sv]=Åskådliggörande av profileringsdata för prestanda
+Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
+Comment[tg]=Утилита барои гузориши профили визуалӣ
+Comment[uk]=Візуалізація даних профілювання швидкодії
 Comment[x-test]=xxVisualization of Performance Profiling Dataxx
+Comment[zh_TW]=效能分析資料視覺化
 X-DBUS-StartupType=Multi
 Categories=Qt;KDE;Development;
