--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -1,9 +1,38 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=Cachegrind/Callgrind Profile Dump
+Comment[ca]=Resultat del anàlisis de Cachegrind/Callgring
+Comment[cs]=Data profilace Cachegrind/Callgrind
+Comment[cy]=Tomen Proffil Cachegrind/Callgrind
+Comment[da]=Cachegrind/Callgrind profile-dump
+Comment[de]=Cachegrind/Callgrind Profil-Ausgabe
 Comment[el]=Αποτύπωση προφίλ Cachegrind/Callgrind
+Comment[es]=Resultado de análisis de Cachegrind/Callgring
+Comment[et]=Cachegrind/Callgrind profileerimistõmmis
+Comment[eu]=Cachegrind/Callgrind profil iraulketa
+Comment[fa]=تخلیۀ Profile Cachegrind/Callgrind
+Comment[fi]=Cachegrind/Callgrind-profiilivedos
 Comment[fr]=Dépôt de profil Cachegrind / Callgrind
+Comment[hu]=Cachegrind/Callgrind teljesítményprofil-fájl
+Comment[is]=Niðurstaða afkastakönnunar á Cachegrind/Callgrind
+Comment[it]=Dump del profilo di Cachegrind/Callgrind
+Comment[ja]=Callgrind/Callgrind プロファイルダンプ
+Comment[kk]=Cachegrind/Callgrind профилінің дампы
+Comment[nds]=Cachegrind/Callgrind-Profilutgaav
+Comment[nl]=Cachegrind/Callgrind Profieldump
+Comment[nn]=Cachegrind/Callgrind-profildump
+Comment[pl]=Zrzut profilowania Cachegrind/Callgrind
+Comment[pt]=Resultado da Análise do Cachegrind/Callgrind
+Comment[pt_BR]=Depósito de Perfil Cachegrind/Callgrind
+Comment[ru]=Дамп профилирования Cachegrind/Callgrind
+Comment[sr]=Cachegrind-ов/Callgrind-ов избачај профила
+Comment[sr@Latn]=Cachegrind-ov/Callgrind-ov izbačaj profila
+Comment[sv]=Profileringsdump från Cachegrind/Callgrind
+Comment[ta]=இடைமாற்றகட்டம்/ அழைப்பு கட்டம் விவரக்குறி திணிப்பு
+Comment[tg]=Дампи профилкунии Cachegrind/Callgrind
+Comment[uk]=Звалювання профілювання Cachegrind/Callgrind
 Comment[x-test]=xxCachegrind/Callgrind Profile Dumpxx
+Comment[zh_TW]=Cachegrind/Callgrind 分析資料傾印
 DefaultApp=kcachegrind
 Icon=kcachegrind
 Type=MimeType
