SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=645786

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -26,6 +26,7 @@ GenericName[fa]=پایانۀ گزارش‌گیر
 GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
 GenericName[ga]=Comhéadan ar Phróifíleoir
+GenericName[gl]=Interface para o profiler
 GenericName[hi]=प्रोफ़ाइलर फ्रन्टएण्ड
 GenericName[hu]=Profilozó
 GenericName[is]=Myndrænt viðmót á afkastakönnuð
@@ -68,6 +69,7 @@ Comment[eu]=Errendimendu profil datuen bistaratzea
 Comment[fa]=تجسم کارایی گزارش داده‌ها
 Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
 Comment[fr]=Visualisation des données de performance de profilage
+Comment[gl]=Visualización dos datos da análise de rendimento
 Comment[hi]=परफार्मेस प्रोफाइलिंग डाटा का विजुअलाइज़ेशन
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
 Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
