--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -13,6 +13,7 @@ Comment[eu]=Cachegrind/Callgrind profil iraulketa
 Comment[fa]=تخلیۀ Profile Cachegrind/Callgrind
 Comment[fi]=Cachegrind/Callgrind-profiilivedos
 Comment[fr]=Dépôt de profil Cachegrind / Callgrind
+Comment[gl]=Resultado da análise de Cachegrind/Callgrind
 Comment[hi]=केश-ग्रिंड/काल-ग्रिंड प्रोफ़ाइल डम्प
 Comment[hu]=Cachegrind/Callgrind teljesítményprofil-fájl
 Comment[is]=Niðurstaða afkastakönnunar á Cachegrind/Callgrind
