SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=655667

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -76,6 +76,7 @@ Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
 Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[kk]=Деректерді профильдеудің визуализациясы
+Comment[lt]=Veikimo profiliavimo duomenų vizualizacija
 Comment[nb]=Vis informasjon om ytelse.
 Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
 Comment[nl]=Visualisatie van Performance Profiling Data
