SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=656337

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -42,7 +42,7 @@ GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
 GenericName[pl]=Interfejs do profilera
 GenericName[pt]=Interface de Profiler
 GenericName[pt_BR]=Interface para o Profiler
-GenericName[ru]=Интерфейс к профилировщику
+GenericName[ru]=Профилировщик
 GenericName[sk]=Rozhranie pre profiler
 GenericName[sl]=Vmesnik profilnika
 GenericName[sr]=Графички интерфејс за профајлер
