SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=669346

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -42,7 +42,7 @@ GenericName[pt_BR]=Interface para o Profiler
 GenericName[ru]=Интерфейс к профилировщику
 GenericName[sl]=Vmesnik profilnika
 GenericName[sr]=Графички интерфејс за профајлер
-GenericName[sr@Latn]=Grafički interfejs za profajler
+GenericName[sr@latin]=Grafički interfejs za profajler
 GenericName[sv]=Profileringsgränssnitt
 GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
 GenericName[tg]=Интерфейс ба профилкунанда
@@ -78,7 +78,7 @@ Comment[pt_BR]=Visualização de Dados de Perfil de Desempenho
 Comment[ru]=Утилита для визуального профилирования приложений
 Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
 Comment[sr]=Визуелизација података о профилисању перформанси
-Comment[sr@Latn]=Vizuelizacija podataka o profilisanju performansi
+Comment[sr@latin]=Vizuelizacija podataka o profilisanju performansi
 Comment[sv]=Åskådliggörande av profileringsdata för prestanda
 Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
 Comment[tg]=Утилита барои гузориши профили визуалӣ
