kcachegrind: Refactoring CostType -> EventType
Objects representing an event type such as "instructions
executed" or "L1 misses" should be named in a more
specific way than "cost type". The type of a profiling
cost (number of times an event happend) can distinguished
according to event type and position type (eg. source
line, function or library). The latter is distinction is
included in the enum TraceItem::CostType.

This refactoring includes class/method/variable renamings.
Even 4 file renamings...

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=681130

--- a/kcachegrind/CMakeLists.txt
+++ b/kcachegrind/CMakeLists.txt
@@ -31,10 +31,10 @@ set(kcachegrind_SRCS
    callmapview.cpp 
    callview.cpp 
    coverageview.cpp 
-   costtypeview.cpp 
+   eventtypeview.cpp 
    partview.cpp 
    listutils.cpp 
-   costtypeitem.cpp 
+   eventtypeitem.cpp 
    multiview.cpp 
    callitem.cpp 
    coverageitem.cpp 
