SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=682204

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -37,6 +37,7 @@ GenericName[nl]=Profiler-hulpprogramma
 GenericName[nn]=Grensesnitt for profilvising
 GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
 GenericName[pl]=Interfejs do profilera
+GenericName[pt]=Interface de Análise de Performance
 GenericName[pt_BR]=Interface para o Profiler
 GenericName[ru]=Интерфейс к профилировщику
 GenericName[sl]=Vmesnik profilnika
@@ -72,6 +73,7 @@ Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
 Comment[nl]=Visualisatie van Performance Profiling Data
 Comment[nn]=Vis informasjon om yting
 Comment[pl]=Wizualizacja danych profilowania wydajności
+Comment[pt]=Visualização dos Dados de Análise de Performance
 Comment[pt_BR]=Visualização de Dados de Perfil de Desempenho
 Comment[ru]=Утилита для визуального профилирования приложений
 Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
