SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=683588

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -36,6 +36,7 @@ GenericName[kk]=Профильдеткіштің интерфейсі
 GenericName[lt]=Profiliuoklio naudotojo sąsaja
 GenericName[nb]=Grensesnitt for profilvisning
 GenericName[nds]=Profiler-Böversiet
+GenericName[ne]=प्रोफाइलर फ्रन्टइन्ड
 GenericName[nl]=Profiler-hulpprogramma
 GenericName[nn]=Grensesnitt for profilvising
 GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
@@ -79,6 +80,7 @@ Comment[kk]=Деректерді профильдеудің визуализац
 Comment[lt]=Veikimo profiliavimo duomenų vizualizacija
 Comment[nb]=Vis informasjon om ytelse.
 Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
+Comment[ne]=सम्पादन प्रोफाइलिङ डाटाको दृष्टिकरण
 Comment[nl]=Visualisatie van Performance Profiling Data
 Comment[nn]=Vis informasjon om yting
 Comment[pl]=Wizualizacja danych profilowania wydajności
