--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -21,6 +21,7 @@ Comment[it]=Dump del profilo di Cachegrind/Callgrind
 Comment[ja]=Callgrind/Callgrind プロファイルダンプ
 Comment[kk]=Cachegrind/Callgrind профилінің дампы
 Comment[nds]=Cachegrind/Callgrind-Profilutgaav
+Comment[ne]=Cachegrind/Callgrind प्रोफाइल डम्प
 Comment[nl]=Cachegrind/Callgrind Profieldump
 Comment[nn]=Cachegrind/Callgrind-profildump
 Comment[pl]=Zrzut profilowania Cachegrind/Callgrind
