--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -33,6 +33,7 @@ GenericName[kk]=Профильдеткіштің интерфейсі
 GenericName[lt]=Profiliuoklio naudotojo sąsaja
 GenericName[nb]=Grensesnitt for profilvisning
 GenericName[nds]=Profiler-Böversiet
+GenericName[ne]=प्रोफाइलर फ्रन्टइन्ड
 GenericName[nl]=Profiler-hulpprogramma
 GenericName[nn]=Grensesnitt for profilvising
 GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
@@ -70,6 +71,7 @@ Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[kk]=Деректерді профильдеудің визуализациясы
 Comment[nb]=Vis informasjon om ytelse.
 Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
+Comment[ne]=सम्पादन प्रोफाइलिङ डाटाको दृष्टिकरण
 Comment[nl]=Visualisatie van Performance Profiling Data
 Comment[nn]=Vis informasjon om yting
 Comment[pl]=Wizualizacja danych profilowania wydajności
