SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=696511

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -39,7 +39,7 @@ GenericName[nn]=Grensesnitt for profilvising
 GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
 GenericName[pl]=Interfejs do profilera
 GenericName[pt]=Interface de Análise de Performance
-GenericName[pt_BR]=Interface para o Profiler
+GenericName[pt_BR]=Interface de Análise de Performance
 GenericName[ru]=Интерфейс к профилировщику
 GenericName[sl]=Vmesnik profilnika
 GenericName[sr]=Графички интерфејс за профајлер
@@ -76,7 +76,7 @@ Comment[nl]=Visualisatie van Performance Profiling Data
 Comment[nn]=Vis informasjon om yting
 Comment[pl]=Wizualizacja danych profilowania wydajności
 Comment[pt]=Visualização dos Dados de Análise de Performance
-Comment[pt_BR]=Visualização de Dados de Perfil de Desempenho
+Comment[pt_BR]=Visualização dos Dados de Análise de Performance
 Comment[ru]=Утилита для визуального профилирования приложений
 Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
 Comment[sr]=Визуелизација података о профилисању перформанси
