--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -70,6 +70,7 @@ Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
 Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[kk]=Деректерді профильдеудің визуализациясы
+Comment[lt]=Veikimo profiliavimo duomenų vizualizacija
 Comment[nb]=Vis informasjon om ytelse.
 Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
 Comment[ne]=सम्पादन प्रोफाइलिङ डाटाको दृष्टिकरण
