--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -19,6 +19,7 @@ GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
 GenericName[de]=Profiler Oberfläche
 GenericName[el]=Πρόγραμμα προφίλ
+GenericName[eo]=Fasado de Profililo
 GenericName[es]=Interfaz para Profiler
 GenericName[et]=Profileerimisrakendus
 GenericName[eu]=Profilatzailearen interfazea
