--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -55,7 +55,7 @@ GenericName[x-test]=xxProfiler Frontendxx
 GenericName[zh_CN]=性能测试数据前端
 GenericName[zh_TW]=分析器前端
 Comment=Visualization of Performance Profiling Data
-Comment[ca]=Visualizació de dades de perfilat de rendiment
+Comment[ca]=Visualització de dades de perfilat de rendiment
 Comment[cs]=Vizualizace profilovacích dat výkonu
 Comment[da]=Visualisering af profileringsdata
 Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
