SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=750403

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -43,6 +43,7 @@ GenericName[pl]=Interfejs do profilera
 GenericName[pt]=Interface de Análise de Performance
 GenericName[pt_BR]=Interface de Análise de Performance
 GenericName[ru]=Интерфейс к профилировщику
+GenericName[sk]=Rozhranie pre profiler
 GenericName[sl]=Vmesnik profilnika
 GenericName[sr]=Графички интерфејс за профајлер
 GenericName[sr@latin]=Grafički interfejs za profajler
@@ -82,6 +83,7 @@ Comment[pl]=Wizualizacja danych profilowania wydajności
 Comment[pt]=Visualização dos Dados de Análise de Performance
 Comment[pt_BR]=Visualização dos Dados de Análise de Performance
 Comment[ru]=Утилита для визуального профилирования приложений
+Comment[sk]=Vizualizácia dát o výkone
 Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
 Comment[sr]=Визуелизација података о профилисању перформанси
 Comment[sr@latin]=Vizuelizacija podataka o profilisanju performansi
