--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -34,6 +34,7 @@ GenericName[it]=Interfaccia a profiler
 GenericName[ja]=プロファイラフロントエンド
 GenericName[kk]=Профильдеткіштің интерфейсі
 GenericName[lt]=Profiliuoklio naudotojo sąsaja
+GenericName[lv]=Profilēšanas priekšpuse
 GenericName[nb]=Grensesnitt for profilvisning
 GenericName[nds]=Profiler-Böversiet
 GenericName[ne]=प्रोफाइलर फ्रन्टइन्ड
@@ -76,6 +77,7 @@ Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[kk]=Деректерді профильдеудің визуализациясы
 Comment[lt]=Veikimo profiliavimo duomenų vizualizacija
+Comment[lv]=Veiktspējas profilēšanas datu vizualizācija
 Comment[nb]=Vis informasjon om ytelse.
 Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
 Comment[ne]=सम्पादन प्रोफाइलिङ डाटाको दृष्टिकरण
