SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=757114

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -70,6 +70,7 @@ Comment[eu]=Errendimendu profil datuen bistaratzea
 Comment[fa]=تجسم کارایی گزارش داده‌ها
 Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
 Comment[fr]=Visualisation des données de performance de profilage
+Comment[ga]=Amharcléiriú ar Shonraí Próifílithe Feidhmíochta
 Comment[gl]=Visualización dos datos da análise de rendimento
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
 Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
