SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=758820

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -40,7 +40,7 @@ GenericName[nds]=Profiler-Böversiet
 GenericName[ne]=प्रोफाइलर फ्रन्टइन्ड
 GenericName[nl]=Profiler-hulpprogramma
 GenericName[nn]=Grensesnitt for profilvising
-GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
+GenericName[pa]=ਪਰੋਫਾਇਲਰ ਫਰੰਟ-ਐਂਡ
 GenericName[pl]=Interfejs do profilera
 GenericName[pt]=Interface de Análise de Performance
 GenericName[pt_BR]=Interface de Análise de Performance
