SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=765165

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -53,6 +53,7 @@ GenericName[sv]=Profileringsgränssnitt
 GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
 GenericName[tg]=Интерфейс ба профилкунанда
 GenericName[tr]=Profil Önyüzü
+GenericName[uk]=Інтерфейс до Profiler
 GenericName[x-test]=xxProfiler Frontendxx
 GenericName[zh_CN]=性能测试数据前端
 GenericName[zh_TW]=分析器前端
@@ -94,6 +95,7 @@ Comment[sr@latin]=Vizuelizacija podataka o profilisanju performansi
 Comment[sv]=Åskådliggörande av profileringsdata för prestanda
 Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
 Comment[tg]=Утилита барои гузориши профили визуалӣ
+Comment[uk]=Візуалізація даних профілювання швидкодії
 Comment[x-test]=xxVisualization of Performance Profiling Dataxx
 Comment[zh_CN]=性能测试数据的可视化表现
 Comment[zh_TW]=效能分析資料視覺化
