--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -95,6 +95,7 @@ Comment[sr@latin]=Vizuelizacija podataka o profilisanju performansi
 Comment[sv]=Åskådliggörande av profileringsdata för prestanda
 Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
 Comment[tg]=Утилита барои гузориши профили визуалӣ
+Comment[tr]=Performans Profilleme Verisinin Görünür Hali
 Comment[uk]=Візуалізація даних профілювання швидкодії
 Comment[x-test]=xxVisualization of Performance Profiling Dataxx
 Comment[zh_CN]=性能测试数据的可视化表现
