SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=809524

--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -19,6 +19,7 @@ Comment[hu]=Cachegrind/Callgrind teljesítményprofil-fájl
 Comment[is]=Niðurstaða afkastakönnunar á Cachegrind/Callgrind
 Comment[it]=Dump del profilo di Cachegrind/Callgrind
 Comment[ja]=Callgrind/Callgrind プロファイルダンプ
+Comment[ka]=Cachegrind/Callgrind პროფილის დამპი
 Comment[kk]=Cachegrind/Callgrind профилінің дампы
 Comment[nds]=Cachegrind/Callgrind-Profilutgaav
 Comment[ne]=Cachegrind/Callgrind प्रोफाइल डम्प
