--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -33,6 +33,7 @@ GenericName[hu]=Profilozó
 GenericName[is]=Myndrænt viðmót á afkastakönnuð
 GenericName[it]=Interfaccia a profiler
 GenericName[ja]=プロファイラフロントエンド
+GenericName[ka]=პროფილერის Frontend
 GenericName[kk]=Профильдеткіштің интерфейсі
 GenericName[lt]=Profiliuoklio naudotojo sąsaja
 GenericName[nb]=Grensesnitt for profilvisning
@@ -77,6 +78,7 @@ Comment[hu]=Teljesítményprofil-adatok megjelenítése
 Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
 Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
+Comment[ka]=წარმადობის მაპროფფილებელი მონაცემების ვიზუალიზაცია
 Comment[kk]=Деректерді профильдеудің визуализациясы
 Comment[lt]=Veikimo profiliavimo duomenų vizualizacija
 Comment[nb]=Vis informasjon om ytelse.
