Use INSTALL_TARGETS_DEFAULT_ARGS
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=813296

--- a/kcachegrind/CMakeLists.txt
+++ b/kcachegrind/CMakeLists.txt
@@ -57,7 +57,7 @@ kde4_add_executable(kcachegrind ${kcachegrind_SRCS})
 
 target_link_libraries(kcachegrind  ${KDE4_KIO_LIBS} ${QT_QT3SUPPORT_LIBRARY})
 
-install(TARGETS kcachegrind  DESTINATION ${BIN_INSTALL_DIR} )
+install(TARGETS kcachegrind  ${INSTALL_TARGETS_DEFAULT_ARGS} )
 
 
 ########### install files ###############
