SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=814784

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -8,6 +8,8 @@ X-DocPath=kcachegrind/index.html
 Terminal=false
 Name=KCachegrind
 Name[ne]=केडीई क्यास ग्रिन्ड
+Name[sr]=К‑кешгринд
+Name[sr@latin]=KCacheGrind
 Name[sv]=Kcachegrind
 Name[ta]=  இடைமாற்றகட்டம்
 Name[x-test]=xxKCachegrindxx
@@ -46,8 +48,8 @@ GenericName[pt_BR]=Interface de Análise de Performance
 GenericName[ru]=Интерфейс к профилировщику
 GenericName[sk]=Rozhranie pre profiler
 GenericName[sl]=Vmesnik profilnika
-GenericName[sr]=Графички интерфејс за профајлер
-GenericName[sr@latin]=Grafički interfejs za profajler
+GenericName[sr]=Сучеље профилизатора
+GenericName[sr@latin]=Sučelje profilizatora
 GenericName[sv]=Profileringsgränssnitt
 GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
 GenericName[tg]=Интерфейс ба профилкунанда
@@ -90,8 +92,8 @@ Comment[pt_BR]=Visualização dos Dados de Análise de Performance
 Comment[ru]=Утилита для визуального профилирования приложений
 Comment[sk]=Vizualizácia dát o výkone
 Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
-Comment[sr]=Визуелизација података о профилисању перформанси
-Comment[sr@latin]=Vizuelizacija podataka o profilisanju performansi
+Comment[sr]=Визуелизација профилисања перформанси
+Comment[sr@latin]=Vizuelizacija profilisanja performansi
 Comment[sv]=Åskådliggörande av profileringsdata för prestanda
 Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
 Comment[tg]=Утилита барои гузориши профили визуалӣ
