SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=857776

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -34,6 +34,7 @@ GenericName[is]=Myndrænt viðmót á afkastakönnuð
 GenericName[it]=Interfaccia a profiler
 GenericName[ja]=プロファイラフロントエンド
 GenericName[kk]=Профильдеткіштің интерфейсі
+GenericName[ko]=프로파일러 프론트엔드
 GenericName[lt]=Profiliuoklio naudotojo sąsaja
 GenericName[lv]=Profilēšanas priekšpuse
 GenericName[nb]=Grensesnitt for profilvisning
@@ -79,6 +80,7 @@ Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
 Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[kk]=Деректерді профильдеудің визуализациясы
+Comment[ko]=성능 프로파일링 데이터 시각화
 Comment[lt]=Veikimo profiliavimo duomenų vizualizacija
 Comment[lv]=Veiktspējas profilēšanas datu vizualizācija
 Comment[nb]=Vis informasjon om ytelse.
