SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=872096

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -34,6 +34,7 @@ GenericName[is]=Myndrænt viðmót á afkastakönnuð
 GenericName[it]=Interfaccia a profiler
 GenericName[ja]=プロファイラフロントエンド
 GenericName[kk]=Профильдеткіштің интерфейсі
+GenericName[km]=កម្មវិធី​ផ្នែកខាង​មុខ​របស់​ទម្រង់
 GenericName[ko]=프로파일러 프론트엔드
 GenericName[lt]=Profiliuoklio naudotojo sąsaja
 GenericName[lv]=Profilēšanas priekšpuse
@@ -80,6 +81,7 @@ Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
 Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[kk]=Деректерді профильдеудің визуализациясы
+Comment[km]=កា​រមើល​ឃើញការ​អនុវត្ត​របស់​ទិន្នន័យ​ទម្រង់
 Comment[ko]=성능 프로파일링 데이터 시각화
 Comment[lt]=Veikimo profiliavimo duomenų vizualizacija
 Comment[lv]=Veiktspējas profilēšanas datu vizualizācija
