Revert it INSTALL_TARGETS_DEFAULT_ARGS doesn't work on PROGRAMS
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=886919

--- a/converters/CMakeLists.txt
+++ b/converters/CMakeLists.txt
@@ -1,2 +1,2 @@
 install( PROGRAMS hotshot2calltree op2calltree pprof2calltree dprof2calltree memprof2calltree
-    ${INSTALL_TARGETS_DEFAULT_ARGS} )
+    DESTINATION ${BIN_INSTALL_DIR} )
