SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=899358

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -47,6 +47,7 @@ GenericName[pa]=ਪਰੋਫਾਇਲਰ ਫਰੰਟ-ਐਂਡ
 GenericName[pl]=Interfejs do profilera
 GenericName[pt]=Interface de Análise de Performance
 GenericName[pt_BR]=Interface de Análise de Performance
+GenericName[ro]=Interfață grafică pentru Profiler
 GenericName[ru]=Интерфейс к профилировщику
 GenericName[sk]=Rozhranie pre profiler
 GenericName[sl]=Vmesnik profilnika
