Split of some classes into a KCachegrind core library
This core library can be used for CLI tools handling profile files

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=914389

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ macro_additional_clean_files(
 	)
 ENDIF(NOT WIN32)
 
+add_subdirectory( libcore )
 add_subdirectory( kcachegrind ) 
 add_subdirectory( pics ) 
 add_subdirectory( converters ) 
