Get rid of HAVE_MMAP check. Use QFile::map for Qt4.4 directly.
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=914390

--- a/libcore/CMakeLists.txt
+++ b/libcore/CMakeLists.txt
@@ -1,7 +1,6 @@
 # FIXME: Only for compiling now
 include_directories(
-	../kcachegrind
-	${CMAKE_CURRENT_BINARY_DIR}/.. )
+	../kcachegrind )
 
 kde4_add_library(core STATIC
    cachegrindloader.cpp
